# survival-rust

./: .typos.toml  Cargo.toml  README.md  pyproject.toml  ruff.toml  survival.pyi  test_concordance1.py
.github/workflows/: lint.yml  publish.yml  rust.yml  security.yml
src/: aaerg.rs  aareg.rs  agexact.pyx  agexact.rs  agfit.rs  agfit4.rs  agfit5.rs  agmart.rs  agmart3.rs  agscore2.rs  agscore3.rs  agsurv4.rs  agsurv5.rs  blogit.rs  brier.rs  cch.rs  cdecomp.rs  chinv2.pyx  chinv2.rs  chinv3.rs  cholesky2.pyx  cholesky2.rs  cholesky3.rs  cholexky5.rs  chsolve2.pyx  chsolve3.rs  chsolve5.rs  cipoisson.rs  clogit.rs  cluster.rs  collapse.rs  concordance.rs  concordance1.rs  concordance3.rs  concordance5.rs  cox_py_callback.rs  coxcount1.rs  coxfit5.rs  coxfit6.rs  coxmart.rs  (+32 more)
src/concordance/: concordance.rs  concordance1.rs  concordance3.rs  concordance5.rs  mod.rs  survConcordance.rs
src/core/: cox_py_callback.rs  coxcount1.rs  coxdetail.rs  coxsafe.rs  coxscho.rs  mod.rs  pspline.rs  pyear2.rs  survpenal.rs
src/matrix/: cdecomp.rs  chinv2.rs  chinv3.rs  cholesky2.rs  cholesky3.rs  cholexky5.rs  chsolve2.rs  chsolve3.rs  chsolve5.rs  dmatrix.rs  gchol.rs  mod.rs
src/python/: cox_py_callback.rs  mod.rs  pyears1.rs  pyears3b.rs  pystep.rs
src/regression/: aareg.rs  agfit.rs  agfit4.rs  agfit5.rs  blogit.rs  clogit.rs  coxfit5.rs  coxfit6.rs  coxph.rs  mod.rs  survreg6.rs  survreg7.rs  survregc1.rs  survregc2.rs
src/residuals/: agmart.rs  agmart3.rs  coxmart.rs  coxmart2.rs  mod.rs  residcsum.rs
src/scoring/: agscore2.rs  agscore3.rs  coxscore2.rs  mod.rs
src/specialized/: brier.rs  cch.rs  cipoisson.rs  finegray.rs  mod.rs  norisk.rs  twoclust.rs
src/surv_analysis/: agsurv4.rs  agsurv5.rs  coxsurv1.rs  coxsurv2.rs  coxsurv3.rs  coxsurv4.rs  fastkm.rs  mod.rs  nelson_aalen.rs  survdiff2.rs  survfit4.rs  survfitaj.rs  survfitkm.rs  survfitresid.rs
src/tests/: coxph_wtest.rs  mod.rs  multicheck.rs  r_validation_tests.rs  unit_tests.rs  validation_tests.rs  zph1.rs  zph2.rs
src/utilities/: agexact.rs  cluster.rs  collapse.rs  doloop.rs  mod.rs  survsplit.rs  tmerge.rs  validation.rs
src/validation/: bootstrap.rs  calibration.rs  crossval.rs  landmark.rs  logrank.rs  mod.rs  (+3 more)
test/: README.md  bladder.rs  book1.rs  book3.rs  book6.rs  book7.rs  clogit.rs  concordance.rs  concordance1.py  concordance2.rs  concordance3.rs  coxsurv.rs  coxsurv2.rs  coxsurv5.rs  coxsurv6.rs  difftest.rs  doaml.rs  dropspecial.rs  ekm.rs  expected.rs  expected2.rs  helpers.py  mstate.rs  mstate2.rs  mstrata.rs  multi3.rs  nsk.rs  test_all.py  test_classes.py  test_concordance_additional.py  test_core.py  test_regression.py  test_specialized.py  test_surv_analysis.py  test_utilities.py
