[package]
name = "survival"
version = "0.1.0"
edition = "2024"

[lib]
name = "survival"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
ndarray = "0.17.1"
numpy = "0.27.1"
ndarray-linalg = { version = "0.18.0", features = ["openblas"] }
itertools = "0.14.0"
libc = "0.2.178"
ndarray-stats = "0.6.0"
statrs = "0.18.0"
thiserror = "2.0.17"
