[package]
name = "survival"
version = "1.0.0"
edition = "2024"
rust-version = "1.92"
authors = ["Cameron Lyons <cameron.lyons2@gmail.com>"]
description = "A high-performance survival analysis library written in Rust with Python bindings"
license = "MIT"
repository = "https://github.com/Cameron-Lyons/survival-rs"
keywords = ["survival-analysis", "statistics", "biostatistics", "cox-regression"]
categories = ["science", "mathematics"]

[lib]
name = "survival"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
ndarray = "0.17.1"
numpy = "0.27.1"
itertools = "0.14.0"
libc = "0.2.178"
ndarray-stats = "0.6.0"
statrs = "0.18.0"
thiserror = "2.0.17"

[target.'cfg(not(windows))'.dependencies]
ndarray-linalg = { version = "0.18.0", features = ["openblas-system"] }

[target.'cfg(windows)'.dependencies]
ndarray-linalg = { version = "0.18.0", features = ["openblas-static"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
