[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "survival"
version = "0.1.0"
description = "A high-performance survival analysis library written in Rust with Python bindings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
keywords = [
    "survival-analysis",
    "kaplan-meier",
    "cox-regression",
    "statistics",
    "biostatistics",
]

[project.urls]
Repository = "https://github.com/cameron/survival-rust"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "survival"
strip = true
